--- a/research/data_ingestion.ipynb
+++ b/research/data_ingestion.ipynb
@@ -9,13 +9,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\End_to_End_Project\\Crop-Image-Classification\n"
+      "d:\\project_task_extra\\deep learning\\Crop-Image-Classification\n"
      ]
     }
    ],
    "source": [
     "import os\n",
-    "%cd D:\\End_to_End_Project\\Crop-Image-Classification"
+    "%cd .."
    ]
   },
   {
@@ -26,7 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "'D:\\\\End_to_End_Project\\\\Crop-Image-Classification'"
+       "'d:\\\\project_task_extra\\\\deep learning\\\\Crop-Image-Classification'"
       ]
      },
      "execution_count": 2,
@@ -47,13 +47,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-06-09 09:05:02,934] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : config\\config.yaml loaded successfully\n",
-      "[2023-06-09 09:05:02,942] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : params.yaml loaded successfully\n",
-      "[2023-06-09 09:05:02,943] || common.py || 64 || root || create_directories() || 64 || INFO || Directory artifacts created successfully\n",
-      "[2023-06-09 09:05:02,944] || common.py || 64 || root || create_directories() || 64 || INFO || Directory artifacts/data_ingestion created successfully\n",
-      "[2023-06-09 09:05:48,919] || 1514379758.py || 69 || root || download_file() || 69 || INFO || artifacts/data_ingestion/data.zip downloaded to following info \n",
+      "[2023-06-09 10:49:03,285] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : config\\config.yaml loaded successfully\n",
+      "[2023-06-09 10:49:03,291] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : params.yaml loaded successfully\n",
+      "[2023-06-09 10:49:03,292] || common.py || 64 || root || create_directories() || 64 || INFO || Directory artifacts created successfully\n",
+      "[2023-06-09 10:49:03,293] || common.py || 64 || root || create_directories() || 64 || INFO || Directory artifacts/data_ingestion created successfully\n",
+      "[2023-06-09 10:49:58,289] || 1514379758.py || 69 || root || download_file() || 69 || INFO || artifacts/data_ingestion/data.zip downloaded to following info \n",
       "Connection: close\n",
-      "Content-Length: 82641724\n",
       "Cache-Control: max-age=300\n",
       "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
       "Content-Type: application/zip\n",
@@ -62,19 +61,20 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 582A:6A30:2D6DB5:42A484:64829DF1\n",
+      "X-GitHub-Request-Id: F3E8:2DC9:3618DE:3D9CD4:6482B647\n",
       "Accept-Ranges: bytes\n",
-      "Date: Fri, 09 Jun 2023 03:35:19 GMT\n",
+      "Date: Fri, 09 Jun 2023 05:19:12 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-hyd1100026-HYD\n",
+      "X-Served-By: cache-bom4722-BOM\n",
       "X-Cache: MISS\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1686281714.486904,VS0,VE5051\n",
+      "X-Timer: S1686287944.724400,VS0,VE8878\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
-      "X-Fastly-Request-ID: f28fe562e3db8ed8a6710047af10ed41f239a6ab\n",
-      "Expires: Fri, 09 Jun 2023 03:40:19 GMT\n",
-      "Source-Age: 5\n",
+      "X-Fastly-Request-ID: 759fb60640aca6e6af9924a75c6801a633734265\n",
+      "Expires: Fri, 09 Jun 2023 05:24:12 GMT\n",
+      "Source-Age: 8\n",
+      "Content-Length: 82641724\n",
       "\n",
       "\n",
       "artifacts/data_ingestion/data.zip\n"
