--- a/research/prepare_callbacks.ipynb
+++ b/research/prepare_callbacks.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d:\\project_task_extra\\deep learning\\Chicken-Disease-Classification\n"
+      "d:\\project_task_extra\\deep learning\\Crop-Image-Classification\n"
      ]
     }
    ],
@@ -52,8 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Chicken_Disease_classification.constants import *\n",
-    "from Chicken_Disease_classification.utils.common import read_yaml,create_directories"
+    "from Crop_Image_Classification.constants import *\n",
+    "from Crop_Image_Classification.utils.common import read_yaml,create_directories"
    ]
   },
   {
@@ -152,11 +152,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-06-08 10:22:18,735] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : config\\config.yaml loaded successfully\n",
-      "[2023-06-08 10:22:18,738] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : params.yaml loaded successfully\n",
-      "[2023-06-08 10:22:18,739] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts already exists\n",
-      "[2023-06-08 10:22:18,741] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts\\prepare_callbacks\\checkpoint_dir already exists\n",
-      "[2023-06-08 10:22:18,742] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts\\prepare_callbacks\\tensorboard_log_dir already exists\n"
+      "[2023-06-09 11:14:06,601] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : config\\config.yaml loaded successfully\n",
+      "[2023-06-09 11:14:06,604] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : params.yaml loaded successfully\n",
+      "[2023-06-09 11:14:06,606] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts already exists\n",
+      "[2023-06-09 11:14:06,608] || common.py || 64 || root || create_directories() || 64 || INFO || Directory artifacts\\prepare_callbacks\\checkpoint_dir created successfully\n",
+      "[2023-06-09 11:14:06,610] || common.py || 64 || root || create_directories() || 64 || INFO || Directory artifacts\\prepare_callbacks\\tensorboard_log_dir created successfully\n"
      ]
     }
    ],
