--- a/research/training.ipynb
+++ b/research/training.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d:\\project_task_extra\\deep learning\\Chicken-Disease-Classification\n"
+      "d:\\project_task_extra\\deep learning\\Crop-Image-Classification\n"
      ]
     }
    ],
@@ -54,14 +54,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Chicken_Disease_classification.constants import *\n",
-    "from Chicken_Disease_classification.utils.common import create_directories,read_yaml\n",
+    "from Crop_Image_Classification.constants import *\n",
+    "from Crop_Image_Classification.utils.common import create_directories,read_yaml\n",
     "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
     "        training = self.config.training\n",
     "        prepare_base_model = self.config.prepare_base_model\n",
     "        params = self.params\n",
-    "        training_data = os.path.join(self.config.data_ingestion.unzip_dir, \"Chicken-fecal-images\")\n",
+    "        training_data = os.path.join(self.config.data_ingestion.unzip_dir, \"Agricultural-crops\")\n",
     "        create_directories([\n",
     "            Path(training.root_dir)\n",
     "        ])\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,65 +242,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-06-08 12:23:43,617] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : config\\config.yaml loaded successfully\n",
-      "[2023-06-08 12:23:43,623] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : params.yaml loaded successfully\n",
-      "[2023-06-08 12:23:43,624] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts already exists\n",
-      "[2023-06-08 12:23:43,625] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts\\prepare_callbacks\\checkpoint_dir already exists\n",
-      "[2023-06-08 12:23:43,626] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts\\prepare_callbacks\\tensorboard_log_dir already exists\n",
-      "[2023-06-08 12:23:43,629] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts\\training already exists\n",
-      "Found 78 images belonging to 2 classes.\n",
-      "Found 312 images belonging to 2 classes.\n",
+      "[2023-06-09 11:44:13,908] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : config\\config.yaml loaded successfully\n",
+      "[2023-06-09 11:44:13,910] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : params.yaml loaded successfully\n",
+      "[2023-06-09 11:44:13,912] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts already exists\n",
+      "[2023-06-09 11:44:13,913] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts\\prepare_callbacks\\checkpoint_dir already exists\n",
+      "[2023-06-09 11:44:13,914] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts\\prepare_callbacks\\tensorboard_log_dir already exists\n",
+      "[2023-06-09 11:44:13,915] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts\\training already exists\n",
+      "Found 155 images belonging to 30 classes.\n",
+      "Found 670 images belonging to 30 classes.\n",
       "Epoch 1/20\n",
-      "19/19 [==============================] - 26s 1s/step - loss: 15.6981 - accuracy: 0.4662 - val_loss: 24.0276 - val_accuracy: 0.3906\n",
+      "41/41 [==============================] - 35s 815ms/step - loss: 3.2083 - accuracy: 0.8211 - val_loss: 6.9780 - val_accuracy: 0.6736\n",
       "Epoch 2/20\n",
-      "19/19 [==============================] - 28s 2s/step - loss: 12.0729 - accuracy: 0.4932 - val_loss: 3.8457 - val_accuracy: 0.7188\n",
+      "41/41 [==============================] - 32s 788ms/step - loss: 1.7603 - accuracy: 0.8624 - val_loss: 7.5528 - val_accuracy: 0.6458\n",
       "Epoch 3/20\n",
-      "19/19 [==============================] - 29s 2s/step - loss: 4.2580 - accuracy: 0.7230 - val_loss: 3.0580 - val_accuracy: 0.7188\n",
+      "41/41 [==============================] - 33s 807ms/step - loss: 2.0302 - accuracy: 0.8456 - val_loss: 8.9811 - val_accuracy: 0.6389\n",
       "Epoch 4/20\n",
-      "19/19 [==============================] - 28s 1s/step - loss: 2.1189 - accuracy: 0.8615 - val_loss: 1.6490 - val_accuracy: 0.8750\n",
+      "41/41 [==============================] - 35s 844ms/step - loss: 2.5031 - accuracy: 0.8303 - val_loss: 7.5036 - val_accuracy: 0.6597\n",
       "Epoch 5/20\n",
-      "19/19 [==============================] - 32s 2s/step - loss: 0.8040 - accuracy: 0.9054 - val_loss: 1.0934 - val_accuracy: 0.8594\n",
+      "41/41 [==============================] - 35s 852ms/step - loss: 2.0853 - accuracy: 0.8654 - val_loss: 7.0728 - val_accuracy: 0.6597\n",
       "Epoch 6/20\n",
-      "19/19 [==============================] - 32s 2s/step - loss: 1.5831 - accuracy: 0.8176 - val_loss: 0.9996 - val_accuracy: 0.9219\n",
+      "41/41 [==============================] - 36s 869ms/step - loss: 2.2012 - accuracy: 0.8486 - val_loss: 7.5073 - val_accuracy: 0.6806\n",
       "Epoch 7/20\n",
-      "19/19 [==============================] - 32s 2s/step - loss: 0.9071 - accuracy: 0.8919 - val_loss: 2.6782 - val_accuracy: 0.7500\n",
+      "41/41 [==============================] - 36s 876ms/step - loss: 2.2583 - accuracy: 0.8609 - val_loss: 7.5237 - val_accuracy: 0.6875\n",
       "Epoch 8/20\n",
-      "19/19 [==============================] - 33s 2s/step - loss: 1.1729 - accuracy: 0.8716 - val_loss: 0.9595 - val_accuracy: 0.9062\n",
+      "41/41 [==============================] - 36s 888ms/step - loss: 1.7473 - accuracy: 0.8624 - val_loss: 9.2238 - val_accuracy: 0.6458\n",
       "Epoch 9/20\n",
-      "19/19 [==============================] - 32s 2s/step - loss: 0.7709 - accuracy: 0.9088 - val_loss: 1.1406 - val_accuracy: 0.8438\n",
+      "41/41 [==============================] - 38s 920ms/step - loss: 1.4444 - accuracy: 0.8945 - val_loss: 8.5492 - val_accuracy: 0.6736\n",
       "Epoch 10/20\n",
-      "19/19 [==============================] - 32s 2s/step - loss: 1.1587 - accuracy: 0.8684 - val_loss: 0.8339 - val_accuracy: 0.9219\n",
+      "41/41 [==============================] - 38s 920ms/step - loss: 1.6731 - accuracy: 0.8838 - val_loss: 8.4416 - val_accuracy: 0.6597\n",
       "Epoch 11/20\n",
-      "19/19 [==============================] - 31s 2s/step - loss: 0.7391 - accuracy: 0.9054 - val_loss: 1.0129 - val_accuracy: 0.8906\n",
+      "41/41 [==============================] - 39s 940ms/step - loss: 1.3408 - accuracy: 0.9083 - val_loss: 7.6399 - val_accuracy: 0.7014\n",
       "Epoch 12/20\n",
-      "19/19 [==============================] - 31s 2s/step - loss: 0.4501 - accuracy: 0.9257 - val_loss: 3.5192 - val_accuracy: 0.6875\n",
+      "41/41 [==============================] - 39s 949ms/step - loss: 0.9147 - accuracy: 0.9021 - val_loss: 7.9021 - val_accuracy: 0.6875\n",
       "Epoch 13/20\n",
-      "19/19 [==============================] - 30s 2s/step - loss: 0.5465 - accuracy: 0.9088 - val_loss: 0.7638 - val_accuracy: 0.9375\n",
+      "41/41 [==============================] - 39s 947ms/step - loss: 1.5495 - accuracy: 0.8869 - val_loss: 8.7602 - val_accuracy: 0.6389\n",
       "Epoch 14/20\n",
-      "19/19 [==============================] - 32s 2s/step - loss: 0.5725 - accuracy: 0.9088 - val_loss: 0.7552 - val_accuracy: 0.9062\n",
+      "41/41 [==============================] - 39s 950ms/step - loss: 1.3680 - accuracy: 0.9021 - val_loss: 7.3868 - val_accuracy: 0.7292\n",
       "Epoch 15/20\n",
-      "19/19 [==============================] - 31s 2s/step - loss: 0.4193 - accuracy: 0.9392 - val_loss: 0.7192 - val_accuracy: 0.9219\n",
+      "41/41 [==============================] - 39s 947ms/step - loss: 0.9217 - accuracy: 0.9098 - val_loss: 8.4911 - val_accuracy: 0.6458\n",
       "Epoch 16/20\n",
-      "19/19 [==============================] - 30s 2s/step - loss: 0.4675 - accuracy: 0.9392 - val_loss: 0.9401 - val_accuracy: 0.9219\n",
+      "41/41 [==============================] - 36s 870ms/step - loss: 1.8255 - accuracy: 0.8761 - val_loss: 6.9836 - val_accuracy: 0.7083\n",
       "Epoch 17/20\n",
-      "19/19 [==============================] - 31s 2s/step - loss: 0.6329 - accuracy: 0.9054 - val_loss: 0.6799 - val_accuracy: 0.9219\n",
+      "41/41 [==============================] - 35s 854ms/step - loss: 1.5855 - accuracy: 0.8838 - val_loss: 8.0763 - val_accuracy: 0.6667\n",
       "Epoch 18/20\n",
-      "19/19 [==============================] - 32s 2s/step - loss: 1.2287 - accuracy: 0.8480 - val_loss: 0.8393 - val_accuracy: 0.9062\n",
+      "41/41 [==============================] - 35s 862ms/step - loss: 1.4989 - accuracy: 0.8838 - val_loss: 7.1938 - val_accuracy: 0.7153\n",
       "Epoch 19/20\n",
-      "19/19 [==============================] - 32s 2s/step - loss: 0.5576 - accuracy: 0.9020 - val_loss: 0.7538 - val_accuracy: 0.9062\n",
+      "41/41 [==============================] - 37s 907ms/step - loss: 1.0448 - accuracy: 0.9174 - val_loss: 6.5865 - val_accuracy: 0.7153\n",
       "Epoch 20/20\n",
-      "19/19 [==============================] - 31s 2s/step - loss: 0.8428 - accuracy: 0.9020 - val_loss: 0.9652 - val_accuracy: 0.8906\n"
+      "41/41 [==============================] - 38s 921ms/step - loss: 0.7686 - accuracy: 0.9266 - val_loss: 8.9186 - val_accuracy: 0.6667\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
+    "import tensorflow as tf\n",
+    "\n",
     "try:\n",
     "    config = ConfigurationManager()\n",
     "    prepare_callbacks_config = config.get_prepare_callback_config()\n",
@@ -311,13 +314,19 @@
     "    training = Training(config=training_config)\n",
     "    training.get_base_model()\n",
     "    training.train_valid_generator()\n",
-    "    training.train(\n",
-    "        callback_list=callbacks_list\n",
-    "    )\n",
     "    \n",
+    "    # Check if checkpoint model exists\n",
+    "    checkpoint_filepath = prepare_callbacks_config.checkpoint_model_filepath\n",
+    "    if os.path.exists(checkpoint_filepath):\n",
+    "        training.model = tf.keras.models.load_model(checkpoint_filepath)\n",
+    "    \n",
+    "    training.train(callback_list=callbacks_list)\n",
+    "    \n",
+    "    # Save checkpoint model\n",
+    "    training.model.save(checkpoint_filepath)\n",
     "    \n",
     "except Exception as e:\n",
-    "    raise e"
+    "    raise e\n"
    ]
   },
   {
