--- a/research/model_evaluation.ipynb
+++ b/research/model_evaluation.ipynb
@@ -52,8 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Chicken_Disease_classification.constants import *\n",
-    "from Chicken_Disease_classification.utils.common import create_directories,save_json,save_bin,read_yaml"
+    "from Crop_Image_Classification.constants import *\n",
+    "from Crop_Image_Classification.utils.common import create_directories,save_json,save_bin,read_yaml"
    ]
   },
   {
@@ -86,6 +86,38 @@
     "            )\n",
     "        \n",
     "        return evaluation_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    * * * * * * * * * *  \n",
+      "                  * * * * * * * * * *  \n",
+      "                * * * * * * * * * *  \n",
+      "              * * * * * * * * * *  \n",
+      "            * * * * * * * * * *  \n",
+      "          * * * * * * * * * *  \n",
+      "        * * * * * * * * * *  \n",
+      "      * * * * * * * * * *  \n",
+      "    * * * * * * * * * *  \n",
+      "  * * * * * * * * * *  \n"
+     ]
+    }
+   ],
+   "source": [
+    "n=10\n",
+    "for i in range(n):\n",
+    "    for i in range(i,n):\n",
+    "        print(\" \",end=\" \")\n",
+    "    for j in range(i+1):\n",
+    "        print(\"*\",end=\" \")\n",
+    "    print(\" \")"
    ]
   },
   {
