--- a/research/training.ipynb
+++ b/research/training.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,61 +242,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-06-09 11:44:13,908] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : config\\config.yaml loaded successfully\n",
-      "[2023-06-09 11:44:13,910] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : params.yaml loaded successfully\n",
-      "[2023-06-09 11:44:13,912] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts already exists\n",
-      "[2023-06-09 11:44:13,913] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts\\prepare_callbacks\\checkpoint_dir already exists\n",
-      "[2023-06-09 11:44:13,914] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts\\prepare_callbacks\\tensorboard_log_dir already exists\n",
-      "[2023-06-09 11:44:13,915] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts\\training already exists\n",
+      "[2023-06-09 14:37:20,163] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : config\\config.yaml loaded successfully\n",
+      "[2023-06-09 14:37:20,166] || common.py || 32 || root || read_yaml() || 32 || INFO || yaml file : params.yaml loaded successfully\n",
+      "[2023-06-09 14:37:20,167] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts already exists\n",
+      "[2023-06-09 14:37:20,168] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts\\prepare_callbacks\\checkpoint_dir already exists\n",
+      "[2023-06-09 14:37:20,169] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts\\prepare_callbacks\\tensorboard_log_dir already exists\n",
+      "[2023-06-09 14:37:20,170] || common.py || 67 || root || create_directories() || 67 || INFO || Directory artifacts\\training already exists\n",
       "Found 155 images belonging to 30 classes.\n",
       "Found 670 images belonging to 30 classes.\n",
       "Epoch 1/20\n",
-      "41/41 [==============================] - 35s 815ms/step - loss: 3.2083 - accuracy: 0.8211 - val_loss: 6.9780 - val_accuracy: 0.6736\n",
+      "41/41 [==============================] - 100s 2s/step - loss: 4.3735 - accuracy: 0.5122 - val_loss: 10.0617 - val_accuracy: 0.2778\n",
       "Epoch 2/20\n",
-      "41/41 [==============================] - 32s 788ms/step - loss: 1.7603 - accuracy: 0.8624 - val_loss: 7.5528 - val_accuracy: 0.6458\n",
+      "41/41 [==============================] - 120s 3s/step - loss: 3.5398 - accuracy: 0.5994 - val_loss: 4.1803 - val_accuracy: 0.4653\n",
       "Epoch 3/20\n",
-      "41/41 [==============================] - 33s 807ms/step - loss: 2.0302 - accuracy: 0.8456 - val_loss: 8.9811 - val_accuracy: 0.6389\n",
+      "41/41 [==============================] - 123s 3s/step - loss: 3.5507 - accuracy: 0.5520 - val_loss: 8.2110 - val_accuracy: 0.3194\n",
       "Epoch 4/20\n",
-      "41/41 [==============================] - 35s 844ms/step - loss: 2.5031 - accuracy: 0.8303 - val_loss: 7.5036 - val_accuracy: 0.6597\n",
+      "41/41 [==============================] - 128s 3s/step - loss: 3.7468 - accuracy: 0.5306 - val_loss: 11.0537 - val_accuracy: 0.2431\n",
       "Epoch 5/20\n",
-      "41/41 [==============================] - 35s 852ms/step - loss: 2.0853 - accuracy: 0.8654 - val_loss: 7.0728 - val_accuracy: 0.6597\n",
+      "41/41 [==============================] - 109s 3s/step - loss: 4.8802 - accuracy: 0.5275 - val_loss: 4.5425 - val_accuracy: 0.4583\n",
       "Epoch 6/20\n",
-      "41/41 [==============================] - 36s 869ms/step - loss: 2.2012 - accuracy: 0.8486 - val_loss: 7.5073 - val_accuracy: 0.6806\n",
+      "41/41 [==============================] - 109s 3s/step - loss: 3.4811 - accuracy: 0.5749 - val_loss: 4.3741 - val_accuracy: 0.4306\n",
       "Epoch 7/20\n",
-      "41/41 [==============================] - 36s 876ms/step - loss: 2.2583 - accuracy: 0.8609 - val_loss: 7.5237 - val_accuracy: 0.6875\n",
+      "41/41 [==============================] - 109s 3s/step - loss: 3.2906 - accuracy: 0.5933 - val_loss: 4.7444 - val_accuracy: 0.4167\n",
       "Epoch 8/20\n",
-      "41/41 [==============================] - 36s 888ms/step - loss: 1.7473 - accuracy: 0.8624 - val_loss: 9.2238 - val_accuracy: 0.6458\n",
+      "41/41 [==============================] - 111s 3s/step - loss: 2.5447 - accuracy: 0.6437 - val_loss: 6.0862 - val_accuracy: 0.3819\n",
       "Epoch 9/20\n",
-      "41/41 [==============================] - 38s 920ms/step - loss: 1.4444 - accuracy: 0.8945 - val_loss: 8.5492 - val_accuracy: 0.6736\n",
+      "41/41 [==============================] - 108s 3s/step - loss: 3.5742 - accuracy: 0.5963 - val_loss: 4.1959 - val_accuracy: 0.4722\n",
       "Epoch 10/20\n",
-      "41/41 [==============================] - 38s 920ms/step - loss: 1.6731 - accuracy: 0.8838 - val_loss: 8.4416 - val_accuracy: 0.6597\n",
+      "41/41 [==============================] - 108s 3s/step - loss: 2.9418 - accuracy: 0.6024 - val_loss: 4.9123 - val_accuracy: 0.5347\n",
       "Epoch 11/20\n",
-      "41/41 [==============================] - 39s 940ms/step - loss: 1.3408 - accuracy: 0.9083 - val_loss: 7.6399 - val_accuracy: 0.7014\n",
+      "41/41 [==============================] - 107s 3s/step - loss: 4.3954 - accuracy: 0.5688 - val_loss: 4.8726 - val_accuracy: 0.4653\n",
       "Epoch 12/20\n",
-      "41/41 [==============================] - 39s 949ms/step - loss: 0.9147 - accuracy: 0.9021 - val_loss: 7.9021 - val_accuracy: 0.6875\n",
+      "41/41 [==============================] - 107s 3s/step - loss: 3.0957 - accuracy: 0.5872 - val_loss: 3.9227 - val_accuracy: 0.4931\n",
       "Epoch 13/20\n",
-      "41/41 [==============================] - 39s 947ms/step - loss: 1.5495 - accuracy: 0.8869 - val_loss: 8.7602 - val_accuracy: 0.6389\n",
+      "41/41 [==============================] - 106s 3s/step - loss: 2.9404 - accuracy: 0.5979 - val_loss: 5.5547 - val_accuracy: 0.4653\n",
       "Epoch 14/20\n",
-      "41/41 [==============================] - 39s 950ms/step - loss: 1.3680 - accuracy: 0.9021 - val_loss: 7.3868 - val_accuracy: 0.7292\n",
+      "41/41 [==============================] - 116s 3s/step - loss: 2.6373 - accuracy: 0.6101 - val_loss: 5.9099 - val_accuracy: 0.3611\n",
       "Epoch 15/20\n",
-      "41/41 [==============================] - 39s 947ms/step - loss: 0.9217 - accuracy: 0.9098 - val_loss: 8.4911 - val_accuracy: 0.6458\n",
+      "41/41 [==============================] - 125s 3s/step - loss: 2.4500 - accuracy: 0.6208 - val_loss: 4.6342 - val_accuracy: 0.4306\n",
       "Epoch 16/20\n",
-      "41/41 [==============================] - 36s 870ms/step - loss: 1.8255 - accuracy: 0.8761 - val_loss: 6.9836 - val_accuracy: 0.7083\n",
+      "41/41 [==============================] - 109s 3s/step - loss: 2.5623 - accuracy: 0.6239 - val_loss: 4.3957 - val_accuracy: 0.4931\n",
       "Epoch 17/20\n",
-      "41/41 [==============================] - 35s 854ms/step - loss: 1.5855 - accuracy: 0.8838 - val_loss: 8.0763 - val_accuracy: 0.6667\n",
+      "41/41 [==============================] - 113s 3s/step - loss: 3.2132 - accuracy: 0.5979 - val_loss: 5.7400 - val_accuracy: 0.4306\n",
       "Epoch 18/20\n",
-      "41/41 [==============================] - 35s 862ms/step - loss: 1.4989 - accuracy: 0.8838 - val_loss: 7.1938 - val_accuracy: 0.7153\n",
+      "41/41 [==============================] - 112s 3s/step - loss: 3.0618 - accuracy: 0.6070 - val_loss: 4.1558 - val_accuracy: 0.5486\n",
       "Epoch 19/20\n",
-      "41/41 [==============================] - 37s 907ms/step - loss: 1.0448 - accuracy: 0.9174 - val_loss: 6.5865 - val_accuracy: 0.7153\n",
+      "41/41 [==============================] - 109s 3s/step - loss: 3.2734 - accuracy: 0.5841 - val_loss: 6.0336 - val_accuracy: 0.4653\n",
       "Epoch 20/20\n",
-      "41/41 [==============================] - 38s 921ms/step - loss: 0.7686 - accuracy: 0.9266 - val_loss: 8.9186 - val_accuracy: 0.6667\n"
+      "41/41 [==============================] - 107s 3s/step - loss: 2.9153 - accuracy: 0.6498 - val_loss: 5.2104 - val_accuracy: 0.4514\n"
      ]
     }
    ],
