--- a/research/prepare_callbacks.ipynb
+++ b/research/prepare_callbacks.ipynb
@@ -158,6 +158,14 @@
       "[2023-06-09 11:14:06,608] || common.py || 64 || root || create_directories() || 64 || INFO || Directory artifacts\\prepare_callbacks\\checkpoint_dir created successfully\n",
       "[2023-06-09 11:14:06,610] || common.py || 64 || root || create_directories() || 64 || INFO || Directory artifacts\\prepare_callbacks\\tensorboard_log_dir created successfully\n"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
